outputs/tsp_constructive-constructive/2025-09-21_21-49-46/evaluations/problem_eval-294465656934250347_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    default but dynamically checks if the destination node is sufficiently close (within 1.5 times the average distance to unvisited nodes) to potentially override the farthest neighbor selection, balancing distance and destination prioritization. The dynamic threshold (1.5 × average distance) ensures flexibility, while the farthest neighbor rule provides global optimality. The algorithm efficiently handles edge cases (empty unvisited nodes) and leverages the distance matrix for real-time distance calculations.}
                                                                                                                                                                                                                                                                                   ^
SyntaxError: invalid character '×' (U+00D7)

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    default but dynamically checks if the destination node is sufficiently close (within 1.5 times the average distance to unvisited nodes) to potentially override the farthest neighbor selection, balancing distance and destination prioritization. The dynamic threshold (1.5 × average distance) ensures flexibility, while the farthest neighbor rule provides global optimality. The algorithm efficiently handles edge cases (empty unvisited nodes) and leverages the distance matrix for real-time distance calculations.}
                                                                                                                                                                                                                                                                                   ^
SyntaxError: invalid character '×' (U+00D7)
